--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -217,7 +217,8 @@ services:
       OTEL_RESOURCE_ATTRIBUTES: service.version=latest
       OTEL_TRACES_EXPORTER: "otlp"
       OTEL_METRICS_EXPORTER: "otlp"
-      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: ${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
+      OTEL_EXPORTER_OTLP_ENDPOINT: ${OPEN_TELEMETRY_ENDPOINT:-otel-collector:4317}
+      OTEL_EXPORTER_OTLP_INSECURE: ${OPEN_TELEMETRY_INSECURE:-true}
 
 volumes:
   postgres_prod_data:
